[package]
name = "storyboard-client"
version = "0.2.1"
description = "A client for StoryBoard API"
homepage = "https://github.com/ericho/storyboard-client"
repository = "https://github.com/ericho/storyboard-client"
keywords = ["api", "agile", "storyboard"]
readme = "README.md"
categories = ["web-programming"]
authors = ["Erich Cordoba <erich.cm@yandex.com>"]
license = "MIT"
exclude = ["/.travis.yml", "/ci/*"]

[badges]
travis-ci = { repository = "ericho/storyboard-client" }

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
reqwest = "0.9"
chrono = { version = "0.4", features = ["serde"] }
